add_executable(personGetAllControllerTests ./PersonGetAllControllerTests.cpp)
target_link_libraries(personGetAllControllerTests models)
target_link_libraries(personGetAllControllerTests controllers)
target_link_libraries(personGetAllControllerTests testUtil)
target_link_libraries(personGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(personGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(personGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(personGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(personGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(personGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(personGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(personGetByIdControllerTests ./PersonGetByIdControllerTests.cpp)
target_link_libraries(personGetByIdControllerTests models)
target_link_libraries(personGetByIdControllerTests controllers)
target_link_libraries(personGetByIdControllerTests testUtil)
target_link_libraries(personGetByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(personGetByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(personGetByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(personGetByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(personGetByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(personGetByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(personGetByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(personDeleteByIdControllerTests ./PersonDeleteByIdControllerTests.cpp)
target_link_libraries(personDeleteByIdControllerTests models)
target_link_libraries(personDeleteByIdControllerTests controllers)
target_link_libraries(personDeleteByIdControllerTests testUtil)
target_link_libraries(personDeleteByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(personDeleteByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(personDeleteByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(personDeleteByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(personDeleteByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(personDeleteByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(personDeleteByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(personCreateControllerTests ./PersonCreateControllerTests.cpp)
target_link_libraries(personCreateControllerTests models)
target_link_libraries(personCreateControllerTests controllers)
target_link_libraries(personCreateControllerTests testUtil)
target_link_libraries(personCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(personCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(personCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(personCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(personCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(personCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(personCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(personUpdateByIdControllerTests ./PersonUpdateByIdControllerTests.cpp)
target_link_libraries(personUpdateByIdControllerTests models)
target_link_libraries(personUpdateByIdControllerTests controllers)
target_link_libraries(personUpdateByIdControllerTests testUtil)
target_link_libraries(personUpdateByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(personUpdateByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(personUpdateByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(personUpdateByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(personUpdateByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(personUpdateByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(personUpdateByIdControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_test(NAME PersonGetAllControllerTests COMMAND personGetAllControllerTests)
add_test(NAME PersonGetByIdControllerTests COMMAND personGetByIdControllerTests)
add_test(NAME PersonDeleteByIdControllerTests COMMAND personDeleteByIdControllerTests)
add_test(NAME PersonCreateControllerTests COMMAND personCreateControllerTests)
add_test(NAME PersonUpdateByIdControllerTests COMMAND personUpdateByIdControllerTests)
